# authopsy

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: authopsy.rb
scripts/: build-deb.sh
src/: cli.rs  lib.rs  main.rs
src/analyzer/: detector.rs  differ.rs  mod.rs  status.rs
src/fuzzer/: headers.rs  mod.rs  params.rs
src/http/: client.rs
src/models/: endpoint.rs  mod.rs  result.rs  role.rs  vulnerability.rs
src/reporter/: console.rs  export.rs  matrix.rs  mod.rs
src/scanner/: endpoint.rs  engine.rs  fuzzer_engine.rs  mod.rs  openapi.rs
