[package]
name = "authopsy"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance RBAC vulnerability scanner"
license = "MIT"
repository = "https://github.com/burakozcn01/authopsy"
homepage = "https://github.com/burakozcn01/authopsy"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
tabled = "0.17"
tera = "1.20"
thiserror = "2.0"
anyhow = "1.0"
indicatif = "0.17"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
urlencoding = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
